Fix overflow error

--- a/web_02/style.css
+++ b/web_02/style.css
@@ -21,6 +21,11 @@ body {
   overflow: hidden;
 }
 
+html, body{
+  position: relative;
+  overflow: hidden;
+}
+
 a {
   text-decoration: none;
   color: white;
